--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,7 +2,7 @@ name: Push Master
 on:
   push:
     branches:
-      - master
+      - main 
 jobs:
   master:
     if: "! startsWith(github.event.head_commit.message, '[CI Skip]')"
