change back action script on master

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,7 +2,7 @@ name: Push Master
 on:
   push:
     branches:
-      - main 
+      - master
 jobs:
   master:
     if: "! startsWith(github.event.head_commit.message, '[CI Skip]')"
