--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "build": "skyekiwi-dev-build-ts",
-    "build:release": "skyekiwi-ci-ghact-build",
-    "lint": "skyekiwi-dev-run-lint",
+    "build": "ORG_NAME=CHOKO_WALLET skyekiwi-dev-build-ts",
+    "build:release": "ORG_NAME=CHOKO_WALLET skyekiwi-ci-ghact-build",
+    "build:rollup": "ORG_NAME=CHOKO_WALLET skyekiwi-exec-rollup --config",
+    "lint": "ORG_NAME=CHOKO_WALLET skyekiwi-dev-run-lint",
     "clean": "skyekiwi-dev-clean-build",
     "postinstall": "skyekiwi-dev-yarn-only",
-    "test": "skyekiwi-dev-run-test --coverage --runInBand",
-    "dev:next": "cd ./packages/frontend && yarn dev",
-    "build:next": "cd ./packages/frontend && yarn build"
+    "test": "skyekiwi-dev-run-test --coverage --runInBand"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@skyekiwi/dev": "^0.4.3",
+    "@skyekiwi/dev": "^0.4.5",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.11.11",
     "dotenv": "^10.0.0",
