--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@choko-wallet/core",
-  "version": "0.1.2-0",
+  "version": "0.1.5",
   "type": "module",
   "description": "core wallet sdk used by choko-wallet",
   "main": "index.js",
@@ -20,7 +20,7 @@
     "url": "https://github.com/skyekiwi/choko-wallet-nexet "
   },
   "dependencies": {
-    "@choko-wallet/known-networks": "0.1.2-0",
+    "@choko-wallet/known-networks": "0.1.5",
     "@polkadot/util-crypto": "^10.1.1",
     "@skyekiwi/crypto": "0.8.4-0",
     "@skyekiwi/util": "0.8.4-0"
