--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@choko-wallet/core": "0.1.5",
+    "@polkadot/keyring": "^10.1.2",
+    "@polkadot/util-crypto": "^10.1.2",
     "@skyekiwi/util": "0.8.4-1"
   }
 }
