--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   "scripts": {
     "build": "yarn build:abi && ORG_NAME=CHOKO_WALLET skyekiwi-dev-build-ts",
     "build:release": "yarn build:abi && ORG_NAME=CHOKO_WALLET skyekiwi-ci-ghact-build",
-
     "build:rollup": "ORG_NAME=CHOKO_WALLET skyekiwi-exec-rollup --config",
     "build:abi": "node ./packages/abi/src/build.cjs",
-    
     "lint": "yarn build:abi && ORG_NAME=CHOKO_WALLET skyekiwi-dev-run-lint",
     "clean": "skyekiwi-dev-clean-build",
     "postinstall": "skyekiwi-dev-yarn-only",
@@ -30,6 +28,6 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
-  "version": "0.1.6-11",
+  "version": "0.1.7",
   "packageManager": "yarn@3.0.1"
 }
