--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "@choko-wallet/known-networks": "0.1.8-6",
     "@polkadot/util-crypto": "^10.1.10",
-    "@skyekiwi/crypto": "1.0.1",
-    "@skyekiwi/util": "1.0.1",
+    "@skyekiwi/crypto": "1.0.2-5",
+    "@skyekiwi/util": "1.0.2-5",
     "pako": "^2.0.4"
   },
   "devDependencies": {
