--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -24,8 +24,8 @@
     "@choko-wallet/core": "0.1.8-6",
     "@polkadot/keyring": "^10.1.10",
     "@polkadot/util-crypto": "^10.1.10",
-    "@skyekiwi/crypto": "1.0.1",
-    "@skyekiwi/util": "1.0.1",
+    "@skyekiwi/crypto": "1.0.2-5",
+    "@skyekiwi/util": "1.0.2-5",
     "ethers": "^5.7.0"
   },
   "devDependencies": {
