--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "paths": {
       "@choko-wallet/abi": [ "packages/abi/src" ],
       "@choko-wallet/abi/*": [ "packages/abi/src/*" ],
+      "@choko-wallet/account-abstraction": [ "packages/account-abstraction/src" ],
+      "@choko-wallet/account-abstraction/*": [ "packages/account-abstraction/src/*" ],
       "@choko-wallet/core": [ "packages/core/src" ],
       "@choko-wallet/core/*": [ "packages/core/src/*" ],
       "@choko-wallet/frontend": [ "packages/frontend/" ],
