--- a/packages/request-handler/package.json
+++ b/packages/request-handler/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@choko-wallet/abi": "0.1.8-14",
+    "@choko-wallet/account-abstraction": "0.1.8-14",
     "@choko-wallet/core": "0.1.8-14",
     "@polkadot/keyring": "^10.1.11",
     "@polkadot/util-crypto": "^10.1.11",
