--- a/packages/account-abstraction/package.json
+++ b/packages/account-abstraction/package.json
@@ -23,6 +23,8 @@
     "@choko-wallet/core": "0.1.8-14",
     "@skyekiwi/util": "^1.0.1",
     "ethers": "^5.7.2",
+    "isomorphic-ws": "^5.0.0",
+    "messaging-sdk": "^0.0.3",
     "superagent": "^8.0.4"
   },
   "devDependencies": {
