--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
-  "version": "0.1.8-17",
+  "version": "0.1.9",
   "packageManager": "yarn@3.0.1"
 }
