--- a/packages/mpc/package.json
+++ b/packages/mpc/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@choko-wallet/request-handler",
+  "name": "@choko-wallet/mpc",
   "version": "0.1.10-0",
   "type": "module",
-  "description": "wallet request handlers",
+  "description": "mpc helper choko wallet",
   "main": "index.js",
   "sideEffects": [
     "./detectPackage.js",
@@ -20,16 +20,8 @@
     "url": "https://github.com/choko-wallet/sdk"
   },
   "dependencies": {
-    "@choko-wallet/abi": "0.1.10-0",
-    "@choko-wallet/account-abstraction": "0.1.10-0",
-    "@choko-wallet/core": "0.1.10-0",
-    "@polkadot/keyring": "^10.1.11",
-    "@polkadot/util-crypto": "^10.1.11",
-    "@skyekiwi/crypto": "1.0.2-5",
     "@skyekiwi/util": "1.0.2-5",
-    "ethers": "^5.7.2"
-  },
-  "devDependencies": {
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "@choko-wallet/core": "0.1.10-0"
   }
 }
