--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
       "@choko-wallet/request-handler/*": [ "packages/request-handler/src/*" ],
       "@choko-wallet/sdk": [ "packages/sdk/src" ],
       "@choko-wallet/sdk/*": [ "packages/sdk/src/*" ],
+      "@choko-wallet/auth-client": [ "packages/auth-client/src" ],
+      "@choko-wallet/auth-client/*": [ "packages/auth-client/src/*" ],
     },
     "skipLibCheck": true,
     "typeRoots": [
