--- a/packages/mpc/package.json
+++ b/packages/mpc/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@choko-wallet/core": "0.1.10-1",
     "@skyekiwi/util": "1.0.2-5",
+    "ethers": "^5.7.2",
     "tweetnacl": "^1.0.3"
   }
 }
