flush yarn.lock

--- a/packages/mpc/package.json
+++ b/packages/mpc/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@choko-wallet/core": "0.1.10-4",
-    "@skyekiwi/util": "1.0.2-5",
-    "@skyekiwi/crypto": "1.0.2-5"
+    "@skyekiwi/crypto": "1.0.2-5",
+    "@skyekiwi/util": "1.0.2-5"
   }
 }
