encode calldata for ens on goerli

--- a/packages/ens/package.json
+++ b/packages/ens/package.json
@@ -1,21 +1,24 @@
 {
   "name": "@choko-wallet/ens",
-  "version": "0.0.1",
-  "description": "ens resolver",
+  "version": "0.1.10-14",
+  "type": "module",
+  "description": "ens registar used by choko wallet",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "sideEffects": [
+    "./detectPackage.js",
+    "./detectPackage.cjs"
+  ],
+  "engines": {
+    "node": ">=14.0.0"
   },
+  "maintainers": [],
+  "contributors": [],
+  "author": "Choko Wallet <contact@choko.app>",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/choko-wallet/sdk.git"
+    "url": "https://github.com/choko-wallet/sdk"
   },
-  "author": "",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/choko-wallet/sdk/issues"
-  },
-  "homepage": "https://github.com/choko-wallet/sdk#readme",
   "dependencies": {
     "ethers": "^5.7.2"
   }
