--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "build": "yarn build:abi && ORG_NAME=CHOKO_WALLET skyekiwi-dev-build-ts",
-    "build:release": "yarn build:abi && ORG_NAME=CHOKO_WALLET skyekiwi-ci-ghact-build",
+    "build": "ORG_NAME=CHOKO_WALLET skyekiwi-dev-build-ts",
+    "build:release": "ORG_NAME=CHOKO_WALLET skyekiwi-ci-ghact-build",
     "build:rollup": "ORG_NAME=CHOKO_WALLET skyekiwi-exec-rollup --config",
-    "build:abi": "node ./packages/abi/src/build.cjs",
-    "lint": "yarn build:abi && ORG_NAME=CHOKO_WALLET skyekiwi-dev-run-lint",
+    "lint": "ORG_NAME=CHOKO_WALLET skyekiwi-dev-run-lint",
     "clean": "skyekiwi-dev-clean-build",
     "postinstall": "skyekiwi-dev-yarn-only",
-    "test": "yarn build:abi && skyekiwi-dev-run-test --coverage --runInBand"
+    "test": "skyekiwi-dev-run-test --coverage --runInBand"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
