wrap up for the initial accounts mig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "paths": {
       "@choko-wallet/abi": [ "packages/abi/src" ],
       "@choko-wallet/abi/*": [ "packages/abi/src/*" ],
-      "@choko-wallet/account-abstraction": [ "packages/account-abstraction/src" ],
-      "@choko-wallet/account-abstraction/*": [ "packages/account-abstraction/src/*" ],
+      "@choko-wallet/account": [ "packages/account/src" ],
+      "@choko-wallet/account/*": [ "packages/account/src/*" ],
       "@choko-wallet/core": [ "packages/core/src" ],
       "@choko-wallet/core/*": [ "packages/core/src/*" ],
       "@choko-wallet/ens": [ "packages/ens/src" ],
@@ -22,8 +22,12 @@
       "@choko-wallet/mpc/*": [ "packages/mpc/src/*" ],
       "@choko-wallet/request-handler": [ "packages/request-handler/src" ],
       "@choko-wallet/request-handler/*": [ "packages/request-handler/src/*" ],
+      "@choko-wallet/rpc": [ "packages/rpc/src" ],
+      "@choko-wallet/rpc/*": [ "packages/rpc/src/*" ],
       "@choko-wallet/sdk": [ "packages/sdk/src" ],
       "@choko-wallet/sdk/*": [ "packages/sdk/src/*" ],
+      "@choko-wallet/token-price": [ "packages/token-price/src" ],
+      "@choko-wallet/token-price/*": [ "packages/token-price/src/*" ],
       "@choko-wallet/auth-client": [ "packages/auth-client/src" ],
       "@choko-wallet/auth-client/*": [ "packages/auth-client/src/*" ],
     },
