--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.11.11",
     "dotenv": "^10.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
