--- a/packages/token-price/package.json
+++ b/packages/token-price/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@choko-wallet/account",
+  "name": "@choko-wallet/token-price",
   "version": "0.1.10-21",
   "type": "module",
   "description": "common abi used by choko wallet",
@@ -20,13 +20,8 @@
     "url": "https://github.com/choko-wallet/sdk"
   },
   "dependencies": {
-    "@choko-wallet/core": "0.1.10-21",
-    "@choko-wallet/rpc": "0.1.10-21",
     "@choko-wallet/abi": "0.1.10-21",
-    "@polkadot/util-crypto": "^10.1.11",
-    "@polkadot/keyring": "^10.1.11",
-    "@skyekiw/crypto": "1.0.2-5",
-    "@noble/curves": "1.0.0",
-    "viem": "^0.3.33"
+    "viem": "^0.3.33",
+    "superagent": "^8.0.9"
   }
 }
